--- a/tox.ini
+++ b/tox.ini
@@ -1,20 +1,16 @@
 [tox]
+skipsdist = True
 envlist =
-    py36-{1.8,1.9,1.10,1.11,2.00}
+    py36-{1.11,2.00}
 
 
 [testenv]
+skip_install = true
 deps =
-    pipenv
-    1.8: Django>=1.8,<1.9
-    1.9: Django>=1.9,<1.10
-    1.10: Django>=1.10,<1.11
+    poetry
     1.11: Django>=1.11,<2.00
     2.00: Django>=2.00,<2.10
-
-setenv =
-    PYTHONPATH={toxinidir}
 commands =
-    pipenv install --dev
+    poetry develop
     pytest --cov-append
     coverage report
