feat: use modern jsonfield2 module
BREAKING CHANGE: django-jsonfield is not maintained anymore. `jsonfield2` is a fork with support for modern django versions and acts as a drop in replacement.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ python = ">=3.6"
 
 choicesenum = ">=0.2.2"
 django = ">=1.11"
-django-jsonfield = "^1.0"
 pillow = "^5.0"
+jsonfield2 = "^3.0"
 
 [tool.poetry.dev-dependencies]
 flake8-isort = "^2.5"
