--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,23 @@
+dist: xenial
+sudo: required
+
 language: python
-python: 3.6
+python:
+  - 3.6
+  - 3.7
 node_js: '8'
+
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libimage-exiftool-perl
   - pip install -U tox
   - pip install coveralls
   - npm install
+
 script:
   - node_modules/.bin/commitlint-travis
   - tox -r
+
 after_success:
   - coveralls
 
