--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ node_js: '8'
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq libimage-exiftool-perl
-  - pip install -U tox
-  - pip install coveralls
+  - pip install -U tox-travis
+  - pip install python-coveralls
   - npm install
 
 script:
