ci(tox): install is the new develop

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,6 @@ deps =
     2.0: Django>=2.0,<2.1
     2.1: Django>=2.1,<2.2
 commands =
-    poetry develop
+    poetry install
     pytest --cov-append
     coverage report
