--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ exclude_lines =
 
 
 [tool:pytest]
-addopts = --flake8 --durations=10 --cov=exiffield --cov-report term
+addopts = --flake8 --mypy --durations=10 --cov=exiffield --cov-report term
 norecursedirs = build dist migrations
 testpaths =
     exiffield
