--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 skipsdist = True
 envlist =
-    py36-{1.11,2.0,2.1}
-    py37-{1.11,2.0,2.1}
+    py36-{1.11,2.0,2.1,2.2}
+    py37-{1.11,2.0,2.1,2.2}
+    py38-{1.11,2.0,2.1,2.2}
 
 
 [testenv]
@@ -12,6 +13,7 @@ deps =
     1.11: Django>=1.11,<2.00
     2.0: Django>=2.0,<2.1
     2.1: Django>=2.1,<2.2
+    2.2: Django>=2.2,<2.3
 commands =
     poetry install
     pytest --cov-append
