build: use pre-commit for validation

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ install:
   - sudo apt-get install -qq libimage-exiftool-perl
   - pip install -U tox-travis
   - pip install python-coveralls
-  - npm install
+  - poetry run pre-commit install
 
 script:
-  - node_modules/.bin/commitlint-travis
+  - poetry run pre-commit run -a
   - tox -r
 
 after_success:
