--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ ipython = "^7.9"
 isort = "^4.3"
 mypy = "^0.740.0"
 pdbpp = "^0.10.2"
+pre-commit = "^1.20"
 pytest = "^5.3"
 pytest-cov = "^2.8"
 pytest-django = "^3.7"
