--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ install:
   - sudo apt-get install -qq libimage-exiftool-perl
   - pip install -U tox-travis
   - pip install python-coveralls
+  - pip install poetry
+  - poetry install
   - poetry run pre-commit install
 
 script:
