build: adjust build matrix

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,20 @@
 [tox]
 skipsdist = True
 envlist =
-    py36-{1.11,2.0,2.1,2.2}
-    py37-{1.11,2.0,2.1,2.2}
-    py38-{1.11,2.0,2.1,2.2}
+    py36-{1.11,2.0,2.1,2.2,3.0}
+    py37-{1.11,2.0,2.1,2.2,3.0}
+    py38-{1.11,2.0,2.1,2.2,3.0}
 
 
 [testenv]
 skip_install = true
 deps =
-    poetry
+    poetry>=1.0
     1.11: Django>=1.11,<2.00
     2.0: Django>=2.0,<2.1
     2.1: Django>=2.1,<2.2
     2.2: Django>=2.2,<2.3
+    3.0: Django>=3.0,<3.1
 commands =
     poetry install
     pytest --cov-append
