chore: link with cookiecutter template

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,7 @@ repos:
       - id: isort
         name: isort
         language: system
-        entry: poetry run isort
+        entry: poetry run isort -profile black
         types: [python]
 
   - repo: local
