--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
 name = "django-exiffield"
 version = "2.1.0"
-description = "django-exiffield extracts exif information by utilizing exiftool."
+description = "django-exiffield extracts exif information by utilizing the exiftool."
 authors = [
-  "Alexander Frenzel <alex@relatedworks.com>"
+    "Alexander Frenzel <alex@relatedworks.com>",
 ]
-readme = "README.rst"
-license = "BSD-3-Clause"
 
+license = "BSD-3-Clause"
+readme = "README.md"
+
+documentation = "https://github.com/escaped/django-exiffield/blob/master/README.md"
 homepage = "https://github.com/escaped/django-exiffield"
 repository = "https://github.com/escaped/django-exiffield"
-documentation = "https://github.com/escaped/django-exiffield/blob/master/README.rst"
-
-keywords = ["django", "exif"]
 
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -21,40 +20,43 @@ classifiers = [
   "Intended Audience :: Developers",
   "Operating System :: OS Independent",
   "Programming Language :: Python",
-  "Programming Language :: Python",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.6",
+  "Programming Language :: Python :: 3.7",
+  "Programming Language :: Python :: 3.8",
   "Topic :: Software Development :: Libraries :: Python Modules",
+  "Typing :: Typed",
 ]
 
+include = ["exiffield/py.typed"]
 packages = [
   { include = "exiffield" },
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.6"
-
+python = ">=3.6.1, <4.0"
 choicesenum = ">=0.2.2"
-pillow = ">=5.0"
+django = ">=2.2"
 jsonfield2 = "^3.0"
+pillow = ">=5.0"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^3.7"
-ipython = "^7.9"
-isort = "^4.3"
-mypy = "^0.740.0"
-pdbpp = "^0.10.2"
-pre-commit = "^1.20"
-pytest = "^5.3"
-pytest-cov = "^2.8"
-pytest-django = "^3.7"
-pytest-mock = "^1.12"
-black = "=19.10b0"
+black = "^20.8b1"
+flake8 = "^3.8.3"
+isort = "^5.5.2"
+mypy = "^0.782"
+pre-commit = "^2.7.1"
+pytest = "^6.0.1"
+pytest-cov = "^2.10.1"
+pytest-django = "^3.9.0"
+pytest-mock = "^3.3.1"
+tox = "^3.20.0"
+tox-gh-actions = "^1.3.0"
 
 [tool.black]
-line-length = 89
+line-length = 88
 skip-string-normalization = true
-target_version = ['py36']
+target_version = ['py36', 'py37', 'py38']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -72,4 +74,8 @@ exclude = '''
   )/
 )
 '''
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
 
