--- a/setup.cfg
+++ b/setup.cfg
@@ -1,24 +1,18 @@
-[bdist_wheel]
-universal = 1
-
-
-[metadata]
-description-file =
-    README.rst
-
-
 [isort]
-line_length = 90
+line_length = 88
 known_project = exiffield
 
 
 [flake8]
 exclude =
-    .git,
-    __pycache__,
+    .git
+    __pycache__
     dist
+    build
 
-max-line-length = 90
+ignore =
+  E501  # code is reformatted using black
+max-line-length = 88
 max-complexity = 9
 
 
@@ -43,51 +37,28 @@ exclude_lines =
   raise NotImplementedError
 
   # Don't complain if non-runnable code isn't run:
-  if __name__ == .__main__.:
+  if __name__ == __main__:
+
+  # No need to check type checking imports
+  if TYPE_CHECKING:
 
 
 [tool:pytest]
-addopts = --durations=10 --cov=exiffield --cov-report term
-norecursedirs = build dist migrations
+addopts =
+  --durations=10
+  --cov=exiffield
+  --cov-report term
+norecursedirs = build dist
 testpaths =
-    exiffield
-    tests
+  exiffield
+  tests
 
 
 [mypy]
 # Specify the target platform details in config, so your developers are
 # free to run mypy on Windows, Linux, or macOS and get consistent
 # results.
-python_version=3.6
-platform=windows
+python_version = 3.6
+platform = Linux
 
-# flake8-mypy expects the two following for sensible formatting
-show_column_numbers=True
-show_error_context=False
-
-# do not follow imports (except for ones found in typeshed)
-follow_imports=skip
-
-# suppress errors about unsatisfied imports
-ignore_missing_imports=True
-
-# allow untyped calls as a consequence of the options above
-disallow_untyped_calls=False
-
-# allow returning Any as a consequence of the options above
-warn_return_any=False
-
-# treat Optional per PEP 484
-strict_optional=True
-
-# ensure all execution paths are returning
-warn_no_return=True
-
-# lint-style cleanliness for typing
-warn_redundant_casts=True
-warn_unused_ignores=True
-
-# The following are off by default.  Flip them on if you feel
-# adventurous.
-disallow_untyped_defs=False
-check_untyped_defs=False
+ignore_missing_imports = True
